# random_walker

./: .gitignore  CMakeLists.txt  main.cpp
inc/: main_computations.h  rw_image.h
libpng/: libpng.lib  png.h
py/: main.py  selector.py
random_walker.xcodeproj/: project.pbxproj
random_walker.xcodeproj/xcshareddata/xcschemes/: random_walker.xcscheme
src/: main_computations.cpp  rw_image.cpp
